--- a/src/lib/layers/control_layer/control_layer.module.scss
+++ b/src/lib/layers/control_layer/control_layer.module.scss
@@ -1,13 +1,7 @@
 .control_wrapper {
-
     display: flex;
     align-items: center;
-
     gap: 8px;
-
-    width: 100%;
-    z-index: 100;
+    padding: 5px;
     color: white;
-    transition: all .2s ease-in-out;
-
 }
