--- a/src/lib/provider/tooltip_provider/tooltip-provider.scss
+++ b/src/lib/provider/tooltip_provider/tooltip-provider.scss
@@ -1,7 +1,8 @@
 #tooltip_provider {
     position: relative !important;
-    width: min-content;
+    max-width: inherit;
     height: inherit;
+    z-index: 100;
 
     &:hover {
         cursor: pointer;
@@ -10,6 +11,7 @@
 
 .tooltip_container {
     position: absolute;
+    padding: inherit;
     bottom: 130%;
 }
 
@@ -21,7 +23,7 @@
 .tooltip-enter-active {
     opacity: 1;
     transform: scale(1);
-    transition: opacity 50ms, transform 50ms;
+    transition: opacity 100ms, transform 100ms;
 }
 
 .tooltip-exit {
@@ -32,5 +34,5 @@
 .tooltip-exit-active {
     opacity: 0;
     transform: scale(0.8);
-    transition: opacity 50ms, transform 50ms;
+    transition: opacity 100ms, transform 100ms;
 }
